--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,9 +20,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.8
+          python-version: '3.9'  # Ou use 3.10, 3.11...
 
       - name: Install Python dependencies
         run: pip install black flake8
