--- a/.github/workflows/pylint-badge.yml
+++ b/.github/workflows/pylint-badge.yml
@@ -28,13 +28,23 @@ jobs:
           SCORE=$(tail -n 2 pylint.log | grep -Po '[0-9]+\.[0-9]+(?=/10)')
           echo "Pylint score: $SCORE"
 
-          # Criar badge usando shields.io
-          curl "https://img.shields.io/badge/pylint-$SCORE/10-brightgreen" -o pylint_score.svg
+          # Badge color by score
+          if (( $(echo "$SCORE >= 9" | bc -l) )); then
+            COLOR="brightgreen"
+          elif (( $(echo "$SCORE >= 7" | bc -l) )); then
+            COLOR="yellow"
+          else
+            COLOR="red"
+          fi
+
+          curl "https://img.shields.io/badge/pylint-$SCORE/10-$COLOR" -o pylint_score.svg
 
       - name: Commit badge
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+
           git add pylint_score.svg
-          git commit -m "Atualiza badge pylint" || echo "Sem mudanças"
-          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/lvdamaceno/atualizaProdutosParceirosCsIcorp.git
+          COMMIT_HASH=$(git rev-parse --short HEAD)
+          git commit -m "Atualiza badge pylint (commit $COMMIT_HASH)" || echo "Sem mudanças"
+          git push https
