--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,16 @@ backoff==2.2.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 dill==0.3.9
+exceptiongroup==1.3.0
 idna==3.10
+iniconfig==2.1.0
 isort==6.0.1
 mccabe==0.7.0
+packaging==25.0
 platformdirs==4.3.7
+pluggy==1.6.0
 pylint==3.3.6
+pytest==8.3.5
 python-dotenv==1.1.0
 ratelimit==2.2.1
 requests==2.32.3
